<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="application_name">&TERMUX_APP_NAME;</string>
    <string name="shared_user_label">ZeroTermux user</string>
    <string name="app_name">ZeroTermux</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMUX_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMUX_APP_NAME; can only be run as the primary user.\nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed under any path other than %1$s.</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="action_repair_mode">Repair Mode</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="error_styling_not_installed">The &TERMUX_STYLING_APP_NAME; Plugin App is not installed.</string>
    <string name="action_styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="error_display_over_other_apps_permission_not_granted">&TERMUX_APP_NAME; requires \"Display over other apps\" permission to start terminal sessions from background on Android >= 10. Grants it from Settings -> Apps -> &TERMUX_APP_NAME; -> Advanced</string>
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_run_command_service_allow_external_apps_ungranted">RunCommandService requires `allow-external-apps` property to be set to `true` in `&TERMUX_PROPERTIES_PRIMARY_PATH_SHORT;` file.</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>
    <string name="msg_executable_absolute_path">Executable Absolute Path: \"%1$s\"</string>
    <string name="msg_working_directory_absolute_path">Working Directory Absolute Path: \"%1$s\"</string>
    <string name="title_file_received">Save file in ~/downloads/</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
    <string name="title_activity_termux_settings">&TERMUX_APP_NAME; Settings</string>
    <string name="termux_preferences_title">&TERMUX_APP_NAME;</string>
    <string name="termux_preferences_summary">Preferences for &TERMUX_APP_NAME; app</string>
    <string name="termux_debugging_preferences_title">Debugging</string>
    <string name="termux_debugging_preferences_summary">Preferences for debugging</string>
    <string name="termux_logging_header">Logging</string>
    <string name="termux_log_level_title">Log Level</string>
    <string name="termux_terminal_view_key_logging_enabled_title">Terminal View Key Logging</string>
    <string name="termux_terminal_view_key_logging_enabled_off">Logs will not have entries for terminal view keys. (Default)</string>
    <string name="termux_terminal_view_key_logging_enabled_on">Logcat logs will have entries for terminal view keys. These are very verbose and should be disabled under normal circumstances or will cause performance issues.</string>
    <string name="termux_plugin_error_notifications_enabled_title">Plugin Error Notifications</string>
    <string name="termux_plugin_error_notifications_enabled_off">Disable flashes and notifications for plugin errors.</string>
    <string name="termux_plugin_error_notifications_enabled_on">Show flashes and notifications for plugin errors. (Default)</string>
    <string name="termux_crash_report_notifications_enabled_title">Crash Report Notifications</string>
    <string name="termux_crash_report_notifications_enabled_off">Disable notifications for crash reports.</string>
    <string name="termux_crash_report_notifications_enabled_on">Show notifications for crash reports. (Default)</string>
    <string name="termux_terminal_io_preferences_title">Terminal I/O</string>
    <string name="termux_terminal_io_preferences_summary">Preferences for terminal I/O</string>
    <string name="termux_keyboard_header">Keyboard</string>
    <string name="termux_soft_keyboard_enabled_title">Soft Keyboard Enabled</string>
    <string name="termux_soft_keyboard_enabled_off">Soft keyboard will be disabled.</string>
    <string name="termux_soft_keyboard_enabled_on">Soft keyboard will be enabled. (Default)</string>
    <string name="termux_soft_keyboard_enabled_only_if_no_hardware_title">Soft Keyboard Only If No Hardware</string>
    <string name="termux_soft_keyboard_enabled_only_if_no_hardware_off">Soft keyboard will be enabled even if hardware keyboard is connected. (Default)</string>
    <string name="termux_soft_keyboard_enabled_only_if_no_hardware_on">Soft keyboard will be enabled only if no hardware keyboard is connected.</string>
    <string name="termux_tasker_preferences_title">&TERMUX_TASKER_APP_NAME;</string>
    <string name="termux_tasker_preferences_summary">Preferences for &TERMUX_TASKER_APP_NAME; app</string>
    <string name="action_autofill_username">Autofill username</string>
    <string name="error_termux_service_start_failed_general">Failed to start TermuxService. Check logcat for exception message.</string>
    <string name="error_termux_service_start_failed_bg">Failed to start TermuxService while app is in background due to android bg restrictions.</string>
    <string name="about_preference_title">About</string>
    <string name="donate_preference_title">Donate</string>
    <string name="切换源">Mirrors</string>
    <string name="容器切换">Containers</string>
    <string name="备份恢复">Backup</string>
    <string name="发行版本">Distro</string>
    <string name="QEMU">QEMU</string>
    <string name="命令定义">Commands</string>
    <string name="短信通话">SMS/Call</string>
    <string name="打开目录">Files</string>
    <string name="开机启动">Boot Off</string>
    <string name="开机启动开">Boot On</string>
    <string name="MOE">MOE</string>
    <string name="MOE全能">MOE</string>
    <string name="清华源">QingHuaSource</string>
    <string name="北京源">BeiJinSource</string>
    <string name="官方源">OfficialSource</string>
    <string name="警告">warning</string>
    <string name="该操作会覆盖您的文件记录">This operation will overwrite your file records, do you want to continue?</string>
    <string name="确定">OK</string>
    <string name="无名称系统">UnnamedContainer</string>
    <string name="删除">delete</string>
    <string name="切换">Switch</string>
    <string name="删除完成_需要重进才能刷新">Please select menu function</string>
    <string name="备份">Backup</string>
    <string name="恢复">restore</string>
    <string name="设置">Setting</string>
    <string name="有任务正在进行">There is a task in progress</string>
    <string name="有任务进行中">There is a task in progress</string>
    <string name="按钮一开始启动您的备份">Start your backup</string>
    <string name="开始备份">Start backup</string>
    <string name="你没有SD卡权限">"You don't have SD card permission"</string>
    <string name="选择您的备份方式">Choose your backup method</string>
    <string name="默认备份">Default backup</string>
    <string name="强制备份">Mandatory backup</string>
    <string name="没有找到目录">No directory found</string>
    <string name="这块直接输入回车即可">echo "InPut Enter" \n</string>
    <string name="开始">begin</string>
    <string name="不要说备份着闪退之类的">Don’t talk about backing up and crashing</string>
    <string name="备份完成">Backup complete</string>
    <string name="已成功备份已成功备份">Successfully backed up </string>
    <string name="提示">prompt</string>
    <string name="保存当前配置">Save the current configuration</string>
    <string name="好的">Ok</string>
    <string name="镜像运行结束">End of mirroring operation</string>
    <string name="修改">modify</string>
    <string name="恢复默认命令">Restore default command</string>
    <string name="保存文件">save document</string>
    <string name="请输入保存的文件名">Please enter the saved file name</string>
    <string name="请输入自定义服务器IP">Please enter the custom server IP</string>
    <string name="默认地址">http://10.242.164.19</string>
    <string name="连接">connection</string>
    <string name="取消">Cancel</string>
    <string name="clipboard_title">Clipboard Title:</string>
    <string name="clipboard_msg">Clipboard Msg:</string>
    <string name="clipboard_note">delete</string>
    <string name="delete_restore_data">delete</string>
    <string name="data_file_name">Data Name:</string>
    <string name="data_file_size">Data Size:</string>
    <string name="data_file_path">Data Path:</string>
    <string name="label_server_ip">Remote Device IP address</string>
    <string name="label_video_resolution">Resolution</string>
    <string name="label_video_bitrate">Bitrate</string>
    <string name="action_start">Start</string>
    <string name="switch0">No Control  (check this if remote device control is not required)</string>
    <string name="switch1">Nav Bar  (check this if remote device does not have on-screen nav bar)</string>
    <string name="label_server_title">Label Server (Beta)</string>
    <string name="ip_connect">0.0.0.0</string>
    <string name="zt_crash_history_hint">Crashes are recorded automatically. Up to 100 entries are kept.</string>
    <string name="zt_crash_history_empty">No crash history yet</string>
    <string name="zt_crash_history_clear_all">Clear all</string>
</resources>