<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/shape_line_2e84e6"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:paddingTop="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/color_48baf3"
        style="@style/textEllipsis"
        android:text="@string/data_file_name"
        android:id="@+id/data_name"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:visibility="visible"
        android:text="@string/data_file_size"
        android:id="@+id/data_size"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:text="@string/data_file_path"
        android:id="@+id/data_path"
        style="@style/textEllipsis"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        android:layout_height="wrap_content"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/color_50b397"
        android:text="@string/delete_restore_data"
        android:id="@+id/delete"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:textSize="10sp"
        android:layout_height="wrap_content"/>
</RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</LinearLayout>
